fixed it by moving the path assign forward and the increment backwards

--- a/version2/config.yaml
+++ b/version2/config.yaml
@@ -13,3 +13,4 @@ pathServerPort: 5001
 
 # Websocket that controls the statemachine and we need to callback to
 websocketServer: "wss://leffe.science.uva.nl:8043/unrealServer/"
+# websocketServer: "ws://localhost:5012/"
